secondfile/objects/AT_T_Price_List__c.object
<CustomObject>
    <description>Object setup to capture Price List info from EBM for ATOM.</description>
    <fields>
        <fullName>Interval_Time__c</fullName>
        <label>Interval Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>3 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_List_Id__c</fullName>
        <externalId>true</externalId>
        <label>Price List Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Tier__c</fullName>
        <label>Price List Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AT&amp;T Price List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Interval_Time__c</columns>
        <columns>Price_List_Tier__c</columns>
        <columns>Price_List_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT&amp;T Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>